--- a/index.html
+++ b/index.html
@@ -51,9 +51,8 @@
 						<div class="col-lg-6">
 							<div class="hs-text">
 								<h2>Turn kid clutter into <span>cash.</span></h2>
-								<p> Get rid of all of those things your kids don't use anymore. Simply send us photos of all those clothes, legos, and barbies you want to move on from. We'll get them valued by third party experts and send buyers your way in no time.</p>
-								<a href="#" class="site-btn">Apple Appstore</a>
-								<a href="#" class="site-btn sb-c2">Google Appstore</a>
+								<p>Get rid of all of the clutter your kids don't use anymore. Simply send us photos of everything you want to move on from. We'll turn your photos into appraisals into buyers into cash.</p>
+								<a href="#" class="site-btn">Get it from the Appstore</a>
 							</div>
 						</div>
 						<div class="col-lg-6">
